--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">comboom_sucht_App</string>
+    <string name="app_name">comboom_sucht_app</string>
 </resources>
